# local-onenote-mcp

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
scripts/: check_codex_config.py  smoke_mcp.py
src/local_onenote_mcp/: __init__.py  bridge.py  constants.py  image_utils.py  server.py  xml_utils.py
tests/: test_server.py  test_xml_utils.py
